--- a/signup.html
+++ b/signup.html
@@ -6,10 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Sample</h1>
-    <button><a href="login.html">GO TO LOGIN</a></button>
-    <button>
-      <a href="signup.html">Signup</a>
-    </button>
+    <h1>Sign up</h1>
+    <form>
+      <input type="email" placeholder="Email" />
+      <input type="password" placeholder="Password" />
+      <button type="submit">Signup</button>
+    </form>
   </body>
 </html>
