tix-2 add login layout

--- a/login.html
+++ b/login.html
@@ -6,7 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Sample</h1>
-    <button><a href="login.html">GO TO LOGIN</a></button>
+    <h1>Welcome back User!</h1>
+    <h2>login first!</h2>
+    <br />
+    <input type="text" placeholder="email" />
+    <input type="password" placeholder="********" />
+    <input type="submit" value="LOGIN" />
   </body>
 </html>
